Creado mediante Colaboratory

--- a/01_Basico/Modulo2/Estructuras_selectivas_repetitivas.ipynb
+++ b/01_Basico/Modulo2/Estructuras_selectivas_repetitivas.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "modulo 2.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -100,7 +101,7 @@
         },
         "outputId": "ba567644-033e-4dd6-c0ad-b90cea709bb7"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +140,7 @@
         },
         "outputId": "ee2b0d37-87c9-4cfb-87bb-a25fb32dd55b"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,7 +163,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -188,7 +189,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +216,7 @@
           "height": 35
         }
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -245,7 +246,7 @@
           "height": 35
         }
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +276,7 @@
           "height": 35
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -309,7 +310,7 @@
       "metadata": {
         "id": "mGbrzOEtBa7g"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +325,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,12 +356,12 @@
       ],
       "metadata": {
         "id": "iynNVboZTyy_",
-        "outputId": "7bb55fc4-0f68-4ad7-9a3f-31c183f95499",
+        "outputId": "19e462ee-23af-4cf2-9222-f72acb47876f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 18,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -381,33 +382,71 @@
         "print(f\"Bienvenido {full_name}!\")\n"
       ],
       "metadata": {
-        "id": "ldadfir2G-ee"
+        "id": "ldadfir2G-ee",
+        "outputId": "7d1a8cb1-0ca0-469c-91d7-ee033046cb4c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el primer nombre: Edvin\n",
+            "Ingrese el apellido: Huamanguillas\n",
+            "Bienvenido Edvin Huamanguillas!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "print(f\"Hola, {full_name.title()}!\")"
+        "print(f\"Hola, {full_name}!\")"
       ],
       "metadata": {
-        "id": "9DXlUqRdHWpy"
+        "id": "9DXlUqRdHWpy",
+        "outputId": "5cbb9a7c-db7e-447b-c50a-f45c02e21b61",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola, Edvin Huamanguillas!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "message = f\"Hola, {full_name.title()}!\"\n",
+        "message = f\"Hola, {full_name}!\"\n",
         "print(message)"
       ],
       "metadata": {
-        "id": "ovwhbcW4HnNO"
+        "id": "ovwhbcW4HnNO",
+        "outputId": "8334064f-f274-4483-e9b0-818f76789c18",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hola, Edvin Huamanguillas!\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -415,10 +454,22 @@
         "print(\"Python\")"
       ],
       "metadata": {
-        "id": "d7c9EIszIADO"
+        "id": "d7c9EIszIADO",
+        "outputId": "d8b18c87-0b0d-4e7a-97aa-3b08817d9bf4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -426,7 +477,55 @@
         "print(\"Python's\")"
       ],
       "metadata": {
-        "id": "ypepBjltTCHR"
+        "id": "ypepBjltTCHR",
+        "outputId": "2cd1a6f9-a381-4845-a526-aab6717f7aff",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python's\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print('Python\"s')"
+      ],
+      "metadata": {
+        "id": "fvEyRCxwgyA4",
+        "outputId": "0554330b-5270-4da6-8a10-4447d8b6cbac",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Python\"s\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"hola chicos la clase de hoy se \n",
+        "centra en revisar \n",
+        "los tópicas de estructuras de python\"\"\""
+      ],
+      "metadata": {
+        "id": "7C_1KofhilBz"
       },
       "execution_count": null,
       "outputs": []
@@ -437,10 +536,49 @@
         "print(\"\\tPython\")"
       ],
       "metadata": {
-        "id": "hGmARCyTH_8F"
+        "id": "hGmARCyTH_8F",
+        "outputId": "dfe95334-219d-4d6a-d860-9a99ba1c58c9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\tPython\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"hola chicos en la clase de hoy veremos:\") \n",
+        "print(\"\\t- Estructuras de python\")\n",
+        "print(\"\\t- Estructuras repetitivas\")"
+      ],
+      "metadata": {
+        "id": "IxVXpi16iYsk",
+        "outputId": "adcccec3-cb20-4a49-9cc2-736a10f7d53a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hola chicos en la clase de hoy veremos:\n",
+            "\t- Estructuras de python\n",
+            "\t- Estructuras repetitivas\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -448,10 +586,25 @@
         "print(\"Languages:\\nPython\\nC\\nJavaScript\")"
       ],
       "metadata": {
-        "id": "7sLWgXNbH_zY"
+        "id": "7sLWgXNbH_zY",
+        "outputId": "ab052e69-a498-4c7f-d16c-b5349fce18d7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Languages:\n",
+            "Python\n",
+            "C\n",
+            "JavaScript\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -459,10 +612,25 @@
         "print(\"Languages:\\n\\tPython\\n\\tC\\n\\tJavaScript\")"
       ],
       "metadata": {
-        "id": "GHwzRJQeIgCo"
+        "id": "GHwzRJQeIgCo",
+        "outputId": "8f4ed37b-c496-46a7-ab8f-ad1aed83184b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Languages:\n",
+            "\tPython\n",
+            "\tC\n",
+            "\tJavaScript\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
