--- a/01_Basico/Modulo3/Funciones.ipynb
+++ b/01_Basico/Modulo3/Funciones.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "modulo 3.ipynb",
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -307,7 +308,7 @@
       "metadata": {
         "id": "R0aZ-TvoVoPW"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +323,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1365,7 +1366,7 @@
       "metadata": {
         "id": "EeNB31AJw33c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1381,7 +1382,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1406,7 +1407,7 @@
       "metadata": {
         "id": "_dFbUYqVjA_T"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1424,7 +1425,7 @@
       "metadata": {
         "id": "8DUIP8RNx0ep"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1440,7 +1441,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1464,7 +1465,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1495,7 +1496,7 @@
       "metadata": {
         "id": "sJYXg_v8MZsH"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1506,7 +1507,7 @@
       "metadata": {
         "id": "KQ36ZJk3NGR3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1522,7 +1523,7 @@
           "height": 35
         }
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1549,7 +1550,7 @@
       "metadata": {
         "id": "WRoRgzkKk6or"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1565,7 +1566,7 @@
           "height": 35
         }
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1590,7 +1591,7 @@
       "metadata": {
         "id": "EbgvJud4lxiF"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1605,7 +1606,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1633,7 +1634,7 @@
       "metadata": {
         "id": "YI9nCBdEzxk0"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1649,7 +1650,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1673,7 +1674,7 @@
       "metadata": {
         "id": "3Pw2MCrY0gqb"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1689,7 +1690,7 @@
         "id": "_7hf5yuE0iS0",
         "outputId": "c6f0b317-5291-4c1e-a58a-4ffd3bf85594"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1713,7 +1714,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1744,7 +1745,7 @@
       "metadata": {
         "id": "c0OXOywJ1G3J"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1796,7 +1797,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1925,7 +1926,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -1944,9 +1945,7 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        ""
-      ],
+      "source": [],
       "metadata": {
         "id": "YpcqJpCRUqxx",
         "outputId": "05e7280b-9475-4027-d8a9-3c64786aed4d",
@@ -1954,7 +1953,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2035,7 +2034,7 @@
       "metadata": {
         "id": "4dRXDc0j1Cbw"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2050,7 +2049,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2075,7 +2074,7 @@
       "metadata": {
         "id": "BGbejE2r4A1P"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2091,7 +2090,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2126,7 +2125,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2153,7 +2152,7 @@
           "height": 35
         }
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2184,7 +2183,7 @@
           "height": 35
         }
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2213,7 +2212,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 66,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2235,7 +2234,7 @@
       "metadata": {
         "id": "cGnEviba2fUf"
       },
-      "execution_count": 67,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2246,7 +2245,7 @@
       "metadata": {
         "id": "fdEvjPMq2hBN"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2261,7 +2260,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2283,7 +2282,7 @@
       "metadata": {
         "id": "NEbLP-ZscS0s"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2298,7 +2297,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 71,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2338,7 +2337,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2380,7 +2379,7 @@
       "metadata": {
         "id": "d2v14isCBl7k"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2393,7 +2392,7 @@
       "metadata": {
         "id": "3F3aSIhnCJRS"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2409,7 +2408,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2450,7 +2449,7 @@
       "metadata": {
         "id": "s0rWgO0K5huY"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2465,7 +2464,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2528,7 +2527,7 @@
       "metadata": {
         "id": "GqEL53UHDxWl"
       },
-      "execution_count": 80,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -2538,12 +2537,12 @@
       ],
       "metadata": {
         "id": "6QleoN8X63w-",
-        "outputId": "366d6c0d-f6d9-4df2-9af6-ba05abcacc7c",
+        "outputId": "e5d550b4-c8af-4080-e045-02ef30aa73b7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 81,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -2565,9 +2564,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SQgZl_dgDwue",
-        "outputId": "7b50a3e8-b9d0-4c48-b2ec-4931f53d98f8"
+        "outputId": "7945a766-d5fe-4d14-d357-673ee6e430e9"
       },
-      "execution_count": 82,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -2590,7 +2589,7 @@
       "metadata": {
         "id": "_fejq6AGN0Uf"
       },
-      "execution_count": 83,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -2601,12 +2600,12 @@
       ],
       "metadata": {
         "id": "-9hL5oSIN07z",
-        "outputId": "895c3ea0-9555-48cb-963c-fa3685eb905f",
+        "outputId": "83da48f6-d609-4a3b-98dc-1de722a4ccec",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 84,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -2645,7 +2644,7 @@
       "metadata": {
         "id": "LItqvKT2OMdS"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2661,7 +2660,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2691,7 +2690,7 @@
       "metadata": {
         "id": "QDwsi4DrhncF"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2706,25 +2705,81 @@
     {
       "cell_type": "code",
       "source": [
-        "{'a':'a1',\n",
-        " }"
+        "my_dict = {'a':'a1',\n",
+        " 'b' : 'b2'}"
       ],
       "metadata": {
         "id": "N7rGzzAi72fD"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_dict['a'] = 'a1' "
+        "my_dict['a']"
+      ],
+      "metadata": {
+        "id": "Is5qhv0yFjCa",
+        "outputId": "223ef678-3023-4de5-9c4b-d9be119ebbf2",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        }
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'a1'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dict['a'] = 'modificado'"
       ],
       "metadata": {
         "id": "xBUVzZSU756z"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_dict"
+      ],
+      "metadata": {
+        "id": "RaCEooaZFqLx",
+        "outputId": "c9d1b9b1-3a73-4ec0-a79f-4c21f5dde471",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'a': 'modificado', 'b': 'b2'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2738,8 +2793,34 @@
       "metadata": {
         "id": "tXBMgW8JPAyn"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "build_profile('Edvin', 'Huamanguillas')"
+      ],
+      "metadata": {
+        "id": "vKKWyA5JHD0i",
+        "outputId": "dfb9d430-7bcf-4b5d-fd6e-b44c6af805b4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 20,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'first_name': 'Edvin', 'last_name': 'Huamanguillas'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 20
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -2749,12 +2830,12 @@
       ],
       "metadata": {
         "id": "5Vgv0LQU8G_q",
-        "outputId": "4db070a0-632f-4376-8738-a54a92c09ab5",
+        "outputId": "1afeaa3d-7b0d-44bc-9312-ed0720e33803",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -2775,12 +2856,12 @@
       ],
       "metadata": {
         "id": "uW5z9dNTPKyu",
-        "outputId": "f1979794-32e9-4df3-c83b-ebb338720c59",
+        "outputId": "8e9690fa-0b6f-4745-a4e6-d937b0369adb",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -2803,12 +2884,12 @@
       ],
       "metadata": {
         "id": "NgTwtf_H8YKu",
-        "outputId": "57a69b5a-d7de-4ee6-9f49-2dabf7476a02",
+        "outputId": "12a3ea1e-2cdb-429e-8d4d-75d677c8ffc5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -2835,16 +2916,16 @@
     {
       "cell_type": "code",
       "source": [
-        "def make_sandwich(*toppings):\n",
-        "  \"\"\"This function displays a sandwich toppings\"\"\"\n",
-        "  print('\\nLa pizza contiene los siguientes toppings:')\n",
-        "  for topping in toppings:\n",
-        "    print(f'- {topping}')  \n"
+        "def make_sandwich(*ingredientes):\n",
+        "  \"\"\"Esta función lee los ingredientes para un sandwich\"\"\"\n",
+        "  print('\\nEl sandwich contiene los siguientes ingredientes:')\n",
+        "  for i in ingredientes:\n",
+        "    print(f'- {i}')\n"
       ],
       "metadata": {
         "id": "rDcNXtPv8we_"
       },
-      "execution_count": null,
+      "execution_count": 31,
       "outputs": []
     },
     {
@@ -2854,19 +2935,19 @@
       ],
       "metadata": {
         "id": "oQv0EqcC9cn5",
-        "outputId": "c0073bc5-a8ee-45bb-b679-3e813d9158d5",
+        "outputId": "7c2697ec-b164-4042-eece-b7156a2e74e0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "La pizza contiene los siguientes toppings:\n",
+            "El sandwich contiene los siguientes ingredientes:\n",
             "- Queso\n",
             "- Doble jamón\n",
             "- papas\n"
@@ -2888,6 +2969,34 @@
       }
     },
     {
+      "cell_type": "code",
+      "source": [
+        "user_profile = build_profile('Edvin', 'Huamanguillas',\n",
+        "                             location='Peru',\n",
+        "                             field='Ingeniería Civil',\n",
+        "                             age=32,\n",
+        "                             color='negro')\n",
+        "print(user_profile)"
+      ],
+      "metadata": {
+        "id": "4qA3NkhIVjrq",
+        "outputId": "b27a20ca-7b18-4125-c8ea-1f6d8395fa69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'location': 'Peru', 'field': 'Ingeniería Civil', 'age': 32, 'color': 'negro', 'first_name': 'Edvin', 'last_name': 'Huamanguillas'}\n"
+          ]
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "---\n",
@@ -2905,6 +3014,54 @@
       "metadata": {
         "id": "gpj7y6NYQjLq"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "_4XSG30zYUmp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def make_car(fabricante, modelo, **car_info):\n",
+        "    \"\"\"Build a dictionary containing everything we know about a user.\"\"\"\n",
+        "    car_info['fabricante'] = fabricante\n",
+        "    car_info['modelo'] = modelo\n",
+        "    return car_info"
+      ],
+      "metadata": {
+        "id": "jq7b9MzjWeYB"
+      },
+      "execution_count": 43,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "coche = make_car('subaru', 'outback', color='blue', tow_package=True)\n",
+        "print(coche)"
+      ],
+      "metadata": {
+        "id": "q5FrH0F3Xqsi",
+        "outputId": "4473d8d2-2caa-4713-a550-4c20cdfe9cc3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'color': 'blue', 'tow_package': True, 'fabricante': 'subaru', 'modelo': 'outback'}\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
