--- a/01_Basico/Modulo3/Funciones.ipynb
+++ b/01_Basico/Modulo3/Funciones.ipynb
@@ -2720,12 +2720,12 @@
         "my_dict['a']"
       ],
       "metadata": {
-        "id": "Is5qhv0yFjCa",
-        "outputId": "223ef678-3023-4de5-9c4b-d9be119ebbf2",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "Is5qhv0yFjCa",
+        "outputId": "223ef678-3023-4de5-9c4b-d9be119ebbf2"
       },
       "execution_count": 16,
       "outputs": [
@@ -2761,11 +2761,11 @@
         "my_dict"
       ],
       "metadata": {
-        "id": "RaCEooaZFqLx",
-        "outputId": "c9d1b9b1-3a73-4ec0-a79f-4c21f5dde471",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "RaCEooaZFqLx",
+        "outputId": "c9d1b9b1-3a73-4ec0-a79f-4c21f5dde471"
       },
       "execution_count": 18,
       "outputs": [
@@ -2802,11 +2802,11 @@
         "build_profile('Edvin', 'Huamanguillas')"
       ],
       "metadata": {
-        "id": "vKKWyA5JHD0i",
-        "outputId": "dfb9d430-7bcf-4b5d-fd6e-b44c6af805b4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "vKKWyA5JHD0i",
+        "outputId": "dfb9d430-7bcf-4b5d-fd6e-b44c6af805b4"
       },
       "execution_count": 20,
       "outputs": [
@@ -2979,11 +2979,11 @@
         "print(user_profile)"
       ],
       "metadata": {
-        "id": "4qA3NkhIVjrq",
-        "outputId": "b27a20ca-7b18-4125-c8ea-1f6d8395fa69",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "4qA3NkhIVjrq",
+        "outputId": "b27a20ca-7b18-4125-c8ea-1f6d8395fa69"
       },
       "execution_count": 28,
       "outputs": [
@@ -3028,7 +3028,7 @@
       "cell_type": "code",
       "source": [
         "def make_car(fabricante, modelo, **car_info):\n",
-        "    \"\"\"Build a dictionary containing everything we know about a user.\"\"\"\n",
+        "    \"\"\"La fnción almacena información sobre un automóvil.\"\"\"\n",
         "    car_info['fabricante'] = fabricante\n",
         "    car_info['modelo'] = modelo\n",
         "    return car_info"
@@ -3046,11 +3046,11 @@
         "print(coche)"
       ],
       "metadata": {
-        "id": "q5FrH0F3Xqsi",
-        "outputId": "4473d8d2-2caa-4713-a550-4c20cdfe9cc3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "q5FrH0F3Xqsi",
+        "outputId": "4473d8d2-2caa-4713-a550-4c20cdfe9cc3"
       },
       "execution_count": 44,
       "outputs": [
