--- a/01_Basico/Modulo3/Funciones.ipynb
+++ b/01_Basico/Modulo3/Funciones.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "modulo 3.ipynb",
       "provenance": [],
-      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2527,7 +2526,7 @@
       "metadata": {
         "id": "GqEL53UHDxWl"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2542,7 +2541,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2566,7 +2565,7 @@
         "id": "SQgZl_dgDwue",
         "outputId": "7945a766-d5fe-4d14-d357-673ee6e430e9"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2589,7 +2588,7 @@
       "metadata": {
         "id": "_fejq6AGN0Uf"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2605,7 +2604,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2644,7 +2643,7 @@
       "metadata": {
         "id": "LItqvKT2OMdS"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -2655,12 +2654,12 @@
       ],
       "metadata": {
         "id": "9OJO5HC0OTEP",
-        "outputId": "34d7d83c-67c7-4845-d7fa-64f7a9fc0720",
+        "outputId": "f6bb6466-b1b6-48a1-c1d8-2f21243ae21a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -2711,7 +2710,7 @@
       "metadata": {
         "id": "N7rGzzAi72fD"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2727,7 +2726,7 @@
         "id": "Is5qhv0yFjCa",
         "outputId": "223ef678-3023-4de5-9c4b-d9be119ebbf2"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2752,7 +2751,7 @@
       "metadata": {
         "id": "xBUVzZSU756z"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2767,7 +2766,7 @@
         "id": "RaCEooaZFqLx",
         "outputId": "c9d1b9b1-3a73-4ec0-a79f-4c21f5dde471"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2793,7 +2792,7 @@
       "metadata": {
         "id": "tXBMgW8JPAyn"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2808,7 +2807,7 @@
         "id": "vKKWyA5JHD0i",
         "outputId": "dfb9d430-7bcf-4b5d-fd6e-b44c6af805b4"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2835,7 +2834,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2861,7 +2860,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2889,7 +2888,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2925,7 +2924,7 @@
       "metadata": {
         "id": "rDcNXtPv8we_"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2940,7 +2939,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2985,7 +2984,7 @@
         "id": "4qA3NkhIVjrq",
         "outputId": "b27a20ca-7b18-4125-c8ea-1f6d8395fa69"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3036,7 +3035,7 @@
       "metadata": {
         "id": "jq7b9MzjWeYB"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3052,7 +3051,7 @@
         "id": "q5FrH0F3Xqsi",
         "outputId": "4473d8d2-2caa-4713-a550-4c20cdfe9cc3"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3084,12 +3083,12 @@
     {
       "cell_type": "code",
       "source": [
-        "from sandwich import make_sandwich"
+        "from mis_funciones import make_sandwich"
       ],
       "metadata": {
         "id": "oLt942aV-KiI"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -3099,19 +3098,19 @@
       ],
       "metadata": {
         "id": "C5oRUNh6-UUA",
-        "outputId": "38610cfd-024f-49af-a988-1c724eafcc3b",
+        "outputId": "b1c05ca6-d66c-473d-9c2c-4806fac6ac26",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "La pizza contiene los siguientes toppings:\n",
+            "El sandwich contiene los siguientes ingredientes:\n",
             "- Queso\n",
             "- Doble jamón\n",
             "- papas\n"
@@ -3122,12 +3121,12 @@
     {
       "cell_type": "code",
       "source": [
-        "from pizza import make_pizza"
+        "from pizza import *"
       ],
       "metadata": {
         "id": "cA4XkhylQYhn"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -3138,12 +3137,12 @@
       ],
       "metadata": {
         "id": "eesDvKLZVehZ",
-        "outputId": "06d86cee-817a-4f48-b4d0-a552e7cddb6a",
+        "outputId": "12b32ed2-f84e-44d5-e01e-1456c1da58d8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -3180,12 +3179,12 @@
       ],
       "metadata": {
         "id": "h6WyN6L9VliG",
-        "outputId": "99dc3380-3b31-44ef-cf07-c585d84234d8",
+        "outputId": "a51f36bf-4d61-4e9a-d96e-1786caa8f3a0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -3215,6 +3214,39 @@
     {
       "cell_type": "code",
       "source": [
+        "import mis_funciones as mf\n",
+        "\n",
+        "mf.make_pizza(16, 'pepperoni')\n",
+        "mf.make_pizza(12, 'mushrooms', 'green peppers', 'extra cheese')"
+      ],
+      "metadata": {
+        "id": "KC-xnseBm9_R",
+        "outputId": "82b25d2f-9722-4218-de57-c595cb4478ba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Making a 16-inch pizza with the following toppings:\n",
+            "- pepperoni\n",
+            "\n",
+            "Making a 12-inch pizza with the following toppings:\n",
+            "- mushrooms\n",
+            "- green peppers\n",
+            "- extra cheese\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pizza as p\n",
         "\n",
         "p.make_pizza(16, 'pepperoni')\n",
@@ -3222,12 +3254,12 @@
       ],
       "metadata": {
         "id": "ErMJcae6VrqE",
-        "outputId": "33d8247f-ec82-4e1b-b7bf-cef3fdcc3837",
+        "outputId": "d671b20f-1fec-443a-df58-0295299f3d8e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -3295,7 +3327,7 @@
       "metadata": {
         "id": "flog3R7bdvZn"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -3306,7 +3338,7 @@
       "metadata": {
         "id": "ekZkhZeud1HN"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -3316,12 +3348,12 @@
       ],
       "metadata": {
         "id": "Vi5yplZPe61f",
-        "outputId": "66208e36-7b06-41a8-c821-10f699e720b6",
+        "outputId": "98f959d4-7b48-4f5a-9a2a-f3fe66c0739d",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -3339,12 +3371,12 @@
       ],
       "metadata": {
         "id": "Uaf2In0sfBfO",
-        "outputId": "b84849dc-6287-4b84-ea0a-02fbb3fd2925",
+        "outputId": "22d9c31f-993e-4fbb-d8fd-408c33b08d3e",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -3371,12 +3403,12 @@
       ],
       "metadata": {
         "id": "bcqIi7zPfmVh",
-        "outputId": "94a931d9-ce93-4002-f526-69b325159c64",
+        "outputId": "ccb69a98-c8d0-4ddc-8d69-697239bc530a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -3394,12 +3426,12 @@
       ],
       "metadata": {
         "id": "RhFLCn3Eftjz",
-        "outputId": "aa376d5a-88d8-4fbe-f35b-8c897ed96a45",
+        "outputId": "44d4950a-bf5c-4243-c304-46a137715840",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -3428,7 +3460,7 @@
       "metadata": {
         "id": "MsHtLxOrf-nB"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -3443,9 +3475,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ia8YHqsWf_T0",
-        "outputId": "9447b01a-dc96-4274-8258-290dc9800ab8"
+        "outputId": "2a49bdaf-f0c9-4e9c-dcde-0854588fbce3"
       },
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -3467,12 +3499,12 @@
       ],
       "metadata": {
         "id": "woRDon1-gBV0",
-        "outputId": "aaffb299-ba2e-42c9-d2f0-648880ea560e",
+        "outputId": "b8d6e8fd-edfd-42a7-e380-4180e2c95e16",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -3504,6 +3536,30 @@
     {
       "cell_type": "code",
       "source": [
+        "class restaurante:\n",
+        "    \"\"\"Esta función tiene como objetivo servir a los procesos de mi restaurante.\"\"\"\n",
+        "    def __init__(self, nombre_restaurante, tipo_cocina):\n",
+        "        \"\"\"Iniciar nombre y tipo.\"\"\"\n",
+        "        self.name = nombre_restaurante\n",
+        "        self.food = tipo_cocina\n",
+        "\n",
+        "    def describe_restaurant(self):\n",
+        "        \"\"\"Simular describe_estaurant in response to a command.\"\"\"\n",
+        "        print(f\"El restaurante {self.name} especializado en {self.food}\")\n",
+        "\n",
+        "    def open_restaurant(self):\n",
+        "        \"\"\"Simulate open_restaurant in response to a command.\"\"\"\n",
+        "        print(f\"El restaurante {self.name} esta abierto!\")"
+      ],
+      "metadata": {
+        "id": "DTnWKQ2gwx4S"
+      },
+      "execution_count": 17,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "class Restaurante:\n",
         "    \"\"\"A simple attempt to model a restaurante.\"\"\"\n",
         "    def __init__(self, nombre_restaurante, tipo_cocina):\n",
@@ -3524,34 +3580,34 @@
       "metadata": {
         "id": "g7gst4DZAlSO"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_rest = Restaurante('Gaston Acurio', 'Criolla')"
+        "my_rest = restaurante('Gaston Acurio', 'Criolla')"
       ],
       "metadata": {
         "id": "kkVZF-lTBS-S"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "my_rest.nombre_restaurante"
+        "my_rest.name"
       ],
       "metadata": {
         "id": "Nb2A0lTlBd8O",
-        "outputId": "8328d88b-d034-49ed-8462-be3167d91a12",
+        "outputId": "03f0715e-835f-46b0-8c81-041ef69b626c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
         }
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3564,7 +3620,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 145
+          "execution_count": 24
         }
       ]
     },
@@ -3575,18 +3631,18 @@
       ],
       "metadata": {
         "id": "Xmx3--qlBhrG",
-        "outputId": "0a1b79b6-4902-4203-b9e3-6a8bcd1cd562",
+        "outputId": "c28aff6f-3b83-46a7-9c17-9602bb90d70c",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Gaston Acurio, Criolla\n"
+            "El restaurante Gaston Acurio especializado en Criolla\n"
           ]
         }
       ]
@@ -3598,18 +3654,18 @@
       ],
       "metadata": {
         "id": "bpm8vBr2B5mT",
-        "outputId": "ca2c28d9-556a-43f2-a021-5e0587632ae6",
+        "outputId": "6e0b5e1e-7ac7-4412-d473-db93da2bfa28",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "El restaurante esta abierto\n"
+            "El restaurante Gaston Acurio esta abierto!\n"
           ]
         }
       ]
@@ -3630,14 +3686,14 @@
     {
       "cell_type": "code",
       "source": [
-        "my_rest1 = Restaurante('Gaston Acurio', 'Criolla')\n",
-        "my_rest2 = Restaurante('Señor Limon', 'Marina')\n",
-        "my_rest3 = Restaurante('Charrua', 'Carnes')"
+        "my_rest1 = restaurante('Gaston Acurio', 'Criolla')\n",
+        "my_rest2 = restaurante('Señor Limon', 'Marina')\n",
+        "my_rest3 = restaurante('Charrua', 'Carnes')"
       ],
       "metadata": {
         "id": "_OeMpa-OCCIm"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -3647,18 +3703,18 @@
       ],
       "metadata": {
         "id": "cbxcp9m8CNNF",
-        "outputId": "35a39fb3-f010-4592-c58c-1625f5dccc17",
+        "outputId": "516125ab-ebbf-41ee-8f18-2311b94de13a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Gaston Acurio, Criolla\n"
+            "El restaurante Gaston Acurio especializado en Criolla\n"
           ]
         }
       ]
@@ -3670,18 +3726,41 @@
       ],
       "metadata": {
         "id": "qiLUedoKCRGo",
-        "outputId": "0d4591bf-3daf-448c-a1e8-503ed6538f1c",
+        "outputId": "0b9c6ecf-c2ed-4af6-8068-55dee3c354d6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Señor Limon, Marina\n"
+            "El restaurante Señor Limon especializado en Marina\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "my_rest2.open_restaurant()"
+      ],
+      "metadata": {
+        "id": "G64pkSW0ytAb",
+        "outputId": "c992d163-d223-4367-fd8b-2fc43863622e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "El restaurante Señor Limon esta abierto!\n"
           ]
         }
       ]
